<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
 	    android:id = "@+id/main_page_left_blank"
 	    android:layout_width = "20dp"
 	    android:layout_height = "fill_parent"
 	    android:layout_alignParentLeft = "true"
 	    
 	    />
 	<TextView
 	    android:id = "@+id/main_page_right_blank"
 	    android:layout_width = "20dp"
 	    android:layout_height = "fill_parent"
 	    android:layout_alignParentRight = "true"
 	    />
 	
    
    <EditText android:id = "@+id/edit_downpayment_amount"
        	android:hint = "@string/edit_downpayment_amount" 
        	android:inputType="number"
        	
        	android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_toLeftOf="@id/main_page_right_blank"
      		android:layout_toRightOf = "@id/main_page_left_blank"
        	/>
    
    <EditText android:id = "@+id/edit_closing_costs"
        	android:hint = "@string/edit_closing_costs" 
        	android:inputType="number"
        	
        	android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_below = "@id/edit_downpayment_amount"
        	android:layout_toLeftOf="@id/main_page_right_blank"
    		android:layout_toRightOf = "@id/main_page_left_blank"/>
    
    <EditText android:id = "@+id/edit_furnishings_equipment"
        	android:hint = "@string/edit_furnishings_equipment" 
        	android:inputType="number"
        	
        	android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_below = "@id/edit_closing_costs"
        	android:layout_toLeftOf="@id/main_page_right_blank"
      		android:layout_toRightOf = "@id/main_page_left_blank"/>
    
    <EditText android:id = "@+id/edit_improvements"
        	android:hint = "@string/edit_improvements" 
        	android:inputType="number"
        	
        	android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_below = "@id/edit_furnishings_equipment"
        	android:layout_toLeftOf="@id/main_page_right_blank"
      		android:layout_toRightOf = "@id/main_page_left_blank"/>
    
    
    <Button android:id = "@+id/next_button" 
        android:text = "@string/button_next" 
        android:onClick="sendMessage"
        
        
        android:layout_width= "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_below = "@id/edit_improvements"
        android:layout_centerHorizontal = "true"
        android:layout_toLeftOf="@id/main_page_right_blank"
      	android:layout_toRightOf = "@id/main_page_left_blank"
        />

</RelativeLayout>
